tests/snapshots/lib__snapshots__legacy@regex-extents.env_filter.snap
---
source: tests/snapshots.rs
expression: "[{a=b=c}],[{a=b=*}],[{a=*=c}],[{*=b=c}]"
---
[{b=c}]=trace,[{a=b}]=trace

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidRegex

  ⚠ invalid regex specified
   ╭────
 1 │ [{a=b=c}],[{a=b=*}],[{a=*=c}],[{*=b=c}]
   ·                         ┬
   ·                         ╰── regex parse error:
    *
    ^
error: repetition operator missing expression
   ╰────

